# blender-plot

./: .gitignore  README.md  playground.py  pyproject.toml  release-requirements.txt  release.py  requirements.txt  test_jupyter_notebook.ipynb
blender_plot/: __init__.py  utils.py
blender_plot/functional/: __init__.py  plots.py  scene.py  utils.py
blender_plot/plots/: __init__.py  render.py
blender_plot/scenes/: __init__.py  base.py  default.py
blenderplot/plots/: render.py
examples/: standard_normal.py
materials/: fuzzy.blend  rainbow.blend
src/blender_plot/: __init__.py
src/blender_plot/materials/: __init__.py  base.py  collection.py  color.py  gradient.py  solid.py  static.py
src/blender_plot/plots/: __init__.py  scatter.py
src/blender_plot/scenes/: base.py
src/blender_plot/utils/: __init__.py  core.py
tests/: test_basic.py  test_blender_version.py  test_import.py  test_materials.py  test_open_window.py  test_plot.py  test_plots.py  test_render.py  test_scene.py
